<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.treeid.treeid.Rezultat">

    <LinearLayout
        android:id="@+id/lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PrvaRec"
            style="@style/text_style"
            />

        <TextView
            android:id="@+id/naziv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_style2"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DrugaRec"
            style="@style/text_style" />



        <TextView
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_style"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rezSlika"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TrecaRec"
            style="@style/text_style"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CetvrtaRec"
            style="@style/text_style"
            />

        <Button
            android:background="@drawable/btn_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button2"
            android:onClick="Ponovno"
            style="@style/btn_style"

            />


    </LinearLayout>

    <!--ImageView koji će biti uvećana slika-->
    <ImageView
        android:id="@+id/zoom"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitCenter"
        android:onClick="ZatvoriSliku"
        android:visibility="invisible"/>

</RelativeLayout>